# jsonrpc-socket-client-rs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/client/: builder.rs  codec.rs  mod.rs  transport.rs
