[package]
name = "jsonrpc_socket_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.4.0"
clap = { version = "4.4.1", features = ["derive"] }
futures-util = { version = "0.3.28", features = ["sink"] }
jsonrpsee-core = { rev = "e3ff7ac62e47529eb4fe6b2c4dc03e32c520ac53", git = "https://github.com/lavigneer/jsonrpsee.git", features = [
    "client",
    "async-client",
] }
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.8", features = ["codec"] }
